Sun Sep 12 04:27:13 2010  Tanaka Akira  <akr@fsij.org>

	* process.c (rlimit_resource_name2int): use STRCASECMP to avoid
	  ALLOCA_N.

Sat Sep 11 16:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): raise if putenv and SetEnvironmentVariable
	  failed, because of the restriction of the size on Windows.
	  based on a patch from Peter Weldon at [ruby-core:32304].  fix:
	  Bug#3812, [ruby-core:32250]

Sat Sep 11 15:19:57 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/httpauth/digestauth.rb (WEBrick::Config::DigestAuth):
	  Add documentation

	* lib/webrick/config.rb (WEBrick::Config::DigestAuth): Add
	  documentation

Sat Sep 11 12:32:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_set_kcode, rb_get_kcode): removed
	  zombie prototype declarations.  a patch from Eric Hodel
	  at [ruby-core:32305].

Sat Sep 11 06:53:12 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_symlink_p): Pathname#symlink?
	  translated from pathname.rb.

Fri Sep 10 23:03:43 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_sticky_p): Pathname#sticky? translated
	  from pathname.rb.

Fri Sep 10 19:11:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#continue): add
	  method for generating HTTP/1.1 100 continue response if the client
	  expects it, otherwise does nothing.  Patch by Brian Candler.
	  ref #855.

	* test/webrick/test_httprequest.rb: test added.

Fri Sep 10 17:49:34 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl/x509-internal.rb: removed unused local
	  variable.

	* test/openssl/*: less warnings while test running with -w.

Fri Sep 10 16:49:20 2010  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args): Add support for optional keyword
	  argument hash. [ruby-dev:42221] [ruby-dev:38048]

	* README.EXT, README.EXT.ja: Update documentation accordingly.
